# obstore

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  DEVELOP.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  test-python.yml  wheels.yml
docs/: alternatives.md  authentication.md  cookbook.md  getting-started.md  performance.md
docs/advanced/: pickle.md
docs/api/: file.md  fsspec.md  get.md  list.md
docs/api/auth/: azure.md  boto3.md  earthdata.md  google.md  planetary-computer.md
docs/api/store/: aws.md  azure.md  config.md  gcs.md  http.md  index.md  local.md  memory.md
docs/blog/posts/: obstore-0.4.md  obstore-0.5.md  obstore-0.6.md
docs/dev/: functional-api.md  overridden-defaults.md  pickle.md
docs/examples/: fastapi.md  minio.md  pyarrow.md  tqdm.md
docs/integrations/: fsspec.md  index.md
docs/overrides/stylesheets/: extra.css
docs/troubleshooting/: aws.md
examples/fastapi/: README.md  main.py  pyproject.toml
examples/minio/: README.md  main.py  pyproject.toml
examples/progress-bar/: README.md  main.py  pyproject.toml
obstore/: Cargo.toml  build.rs  pyproject.toml
obstore/python/obstore/: __init__.py  _attributes.pyi  _buffered.pyi  _bytes.pyi  _copy.pyi  _delete.pyi  _get.pyi  _head.pyi  _list.pyi  _obstore.pyi  _put.pyi  _rename.pyi  _scheme.pyi  _sign.pyi  fsspec.py  store.py
obstore/python/obstore/_store/: __init__.pyi  _aws.pyi  _azure.pyi  _client.pyi  _gcs.pyi  _http.pyi  _retry.pyi
obstore/python/obstore/auth/: __init__.py  azure.py  boto3.py  earthdata.py  google.py  planetary_computer.py
obstore/python/obstore/exceptions/: __init__.pyi
obstore/src/: buffered.rs  copy.rs  delete.rs  get.rs  lib.rs  list.rs  put.rs  rename.rs  scheme.rs  signer.rs  utils.rs
pyo3-bytes/: Cargo.toml  README.md  bytes.pyi
pyo3-bytes/src/: bytes.rs  lib.rs
pyo3-object_store/: CHANGELOG.md  Cargo.toml  README.md  type-hints
pyo3-object_store/src/: api.rs  client.rs  config.rs  credentials.rs  error.rs  http.rs  lib.rs  local.rs  memory.rs  path.rs  prefix.rs  retry.rs  simple.rs  store.rs  url.rs
pyo3-object_store/src/aws/: credentials.rs  mod.rs  store.rs
pyo3-object_store/src/azure/: credentials.rs  error.rs  mod.rs  store.rs
pyo3-object_store/src/gcp/: credentials.rs  mod.rs  store.rs
tests/: conftest.py  test_backoff.py  test_buffered.py  test_bytes.py  test_delete.py  test_fsspec.py  test_get.py  test_list.py  test_obspec.py  test_put.py  test_version.py
tests/auth/: test_planetary_computer.py
tests/store/: test_azure.py  test_config.py  test_from_url.py  test_gcs.py  test_http.py  test_local.py  test_memory.py  test_s3.py
