[workspace]
members = ["obstore"]
# Note: pyo3-object_store is _not_ a member of this workspace because we need to
# patch the object_store version for Python to export a list stream. This list
# stream is implemented in https://github.com/apache/arrow-rs/pull/6619 and will
# be included in object_store's next major release.
#
# But pyo3-object_store gets published to crates.io, which can't have git
# dependencies.
exclude = ["pyo3-object_store", "pyo3-bytes"]
resolver = "2"

[workspace.package]
authors = ["Kyle Barron <kyle@developmentseed.org>"]
edition = "2021"
homepage = "https://developmentseed.org/obstore"
repository = "https://github.com/developmentseed/obstore"
license = "MIT OR Apache-2.0"
keywords = ["python"]
categories = []
rust-version = "1.75"

[workspace.dependencies]
bytes = "1.10.1"
chrono = "0.4.38"
futures = "0.3.31"
http = "1.2"
indexmap = "2"
object_store = "0.12"
pyo3 = { version = "0.24", features = ["macros", "indexmap"] }
pyo3-async-runtimes = { version = "0.24", features = ["tokio-runtime"] }
pyo3-file = "0.12"
thiserror = "1"
tokio = "1.40"
url = "2"

[profile.release]
lto = true
codegen-units = 1
