[project]
name = "test-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.uv]
dev-dependencies = [
    "aiohttp-retry>=2.9.1",
    "aiohttp>=3.11.13",
    "arro3-core>=0.4.2",
    "azure-identity>=1.21.0",
    "boto3>=1.35.38",
    "fastapi>=0.115.12",                  # used in example but added here for pyright CI
    "fsspec>=2024.10.0",
    "google-auth>=2.38.0",
    "griffe-inherited-docstrings>=1.0.1",
    "griffe>=1.6.0",
    "ipykernel>=6.29.5",
    "maturin>=1.7.4",
    "mike>=2.1.3",
    "mkdocs-material[imaging]>=9.6.3",
    "mkdocs-redirects>=1.2.2",
    "mkdocs>=1.6.1",
    "mkdocstrings-python>=1.13.0",
    "mkdocstrings>=0.27.0",
    "moto[s3,server]>=5.1.1",
    "pandas>=2.2.3",
    "pip>=24.2",
    "polars>=1.24.0",
    "pyarrow>=17.0.0",
    "pystac-client>=0.8.3",
    "pystac>=1.10.1",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "ruff>=0.11.0",
    "tqdm>=4.67.1",                       # used in example but added here for pyright CI
    "types-boto3[sts]>=1.36.23",
]
constraint-dependencies = [
    # ensure lockfile grabs wheels for pyproj for each Python version
    "urllib; python_version == '3.9'",
    "urllib>=2.0; python_version >= '3.10'",
]

[tool.uv.workspace]
members = ["examples/fastapi-example"]

[tool.ruff]
target-version = "py39"


[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D104",   # Missing docstring in public package
    "EM101",
    "FIX002", # Line contains TODO, consider resolving the issue
    "PYI021", # docstring-in-stub
    "PYI051", # redundant-literal-union
    "PYI011", # typed-argument-default-in-stub
    "S101",   # allow assert
    "TD",     # Todo comments
    "TRY003", # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.per-file-ignores]
"examples/*" = [
    "PGH004", # Use specific rule codes when using `ruff: noqa`
]
"*.pyi" = [
    "ANN204", # Missing return type annotation for special method
    "E501",   # Line too long
]
"tests/*" = [
    "ANN201",  # Missing return type annotation for public function
    "ANN202",  # Missing return type annotation for private function `it`
    "D100",    # Missing docstring in public module
    "D103",    # Missing docstring in public function
    "PLR2004", # Magic value used in comparison, consider replacing `100` with a constant variable
    "S301",    # `pickle` and modules that wrap it can be unsafe when used to deserialize untrusted data, possible security issue
    "SLF001",  # Private member accessed
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
