[package]
name = "obstore"
version = "0.3.0-beta.10"
authors = { workspace = true }
edition = { workspace = true }
description = "A Python interface to the Rust object_store crate, providing a uniform API for interacting with object storage services and local files."
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_obstore"
crate-type = ["cdylib"]

[dependencies]
arrow = "53"
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
indexmap = { workspace = true }
object_store = { workspace = true }
pyo3 = { version = "0.23.4", workspace = true, features = ["chrono", "extension-module"] }
pyo3-arrow = "0.6"
pyo3-async-runtimes = { version = "0.23", workspace = true, features = ["tokio-runtime"] }
pyo3-file = { workspace = true }
pyo3-object_store = { path = "../pyo3-object_store" }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "full",
] }
url = { workspace = true }
async-stream = "0.3"

# We opt-in to using rustls as the TLS provider for reqwest, which is the HTTP
# library used by object_store.
# https://github.com/seanmonstar/reqwest/issues/2025
reqwest = { version = "*", default-features = false, features = [
    "rustls-tls-native-roots",
] }
tempfile = "3.15.0"
futures-util = "0.3.31"
