[package]
name = "pyo3-bytes"
version = "0.2.0"
authors = [
    "Kyle Barron <kyle@developmentseed.org>",
    "jesse rubin <jesse@dgi.com>",
]
edition = "2021"
description = "bytes integration for pyo3."
readme = "README.md"
repository = "https://github.com/developmentseed/obstore"
license = "MIT OR Apache-2.0"
keywords = ["python", "pyo3", "buffers", "zero-copy"]
categories = []
rust-version = "1.75"

[dependencies]
# https://github.com/tokio-rs/bytes/releases/tag/v1.10.1
bytes = "1.10.1"
pyo3 = "0.24"

[lib]
crate-type = ["rlib"]
